--- a/Modulo 2/Semana08/aulas-react/package.json
+++ b/Modulo 2/Semana08/aulas-react/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
@@ -22,9 +23,5 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "vite": "^4.3.9"
-  },
-  "description": "aulas react",
-  "main": "vite.config.js",
-  "author": "",
-  "license": "ISC"
+  }
 }
